[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu Scene.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1020.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Layout"]
margin_right = 1020.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Button1" type="Button" parent="Layout/ButtonContainer"]
margin_right = 337.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Panel 1"

[node name="Button2" type="Button" parent="Layout/ButtonContainer"]
margin_left = 341.0
margin_right = 678.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Panel 2"

[node name="Button3" type="Button" parent="Layout/ButtonContainer"]
margin_left = 682.0
margin_right = 1020.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Panel 3"

[node name="MenuPanelContainer" type="Container" parent="Layout"]
margin_top = 24.0
margin_right = 1020.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Layout/ButtonContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Layout/ButtonContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Layout/ButtonContainer/Button3" to="." method="_on_Button3_pressed"]
